<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/jasmita" />

        <TextView
            android:id="@+id/txtEnrollmentNo"
            style="@style/myTextview"
            android:gravity="center_horizontal"
            android:text="@string/enrollmentno"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFirstName"
            style="@style/myTextview"
            android:text="@string/firstname" />

        <TextView
            android:id="@+id/txtLastName"
            style="@style/myTextview"
            android:text="@string/lastname" />

        <TextView
            android:id="@+id/txtEmail"
            style="@style/myTextview"
            android:text="@string/email" />

        <TextView
            android:id="@+id/txtPassword"
            style="@style/myTextview"
            android:text="@string/password" />

        <TextView
            android:id="@+id/txtGender"
            style="@style/myTextview"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/txtCity"
            style="@style/myTextview"
            android:text="@string/city" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>